--- a/BlogBook - teste/sigle de review/style.css
+++ b/BlogBook - teste/sigle de review/style.css
@@ -6,4 +6,42 @@
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
 }
-
+.container_banner img{
+    max-width: 100%;
+    height: auto;
+}
+main{
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+    margin-top: -50px;
+}
+.information{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0 5%;
+}
+hr{
+    width: 90%;
+}
+#content-info{
+    margin-top: 15%;
+}
+.Icon{
+    position: absolute;
+    left: 5%;
+}
+.important > img{
+    width: 100px;
+    height: 100px;
+}
+#title_h1{
+    margin-left: -50%;
+}
+#content-info{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 2%;
+}
