--- a/BlogBook - teste/analises page/style.css
+++ b/BlogBook - teste/analises page/style.css
@@ -11,8 +11,14 @@
     display: flex;
     flex: 1;
     padding: 10px;
-    justify-content: center;
-    /* flex: 1;
-    padding: 15px;
-    margin-right: 30px; */
+    /* justify-content: center; */
+    background-color: #2A3DA3;
+}
+.container{
+    max-width: 80%;
+    height: 100%;
+    margin-left: 20px;
+    flex-wrap: wrap;
+    margin-top: 25px;
+    background-color: blueviolet;
 }
