--- a/BlogBook - teste/analises page/style.css
+++ b/BlogBook - teste/analises page/style.css
@@ -15,10 +15,61 @@
     background-color: #2A3DA3;
 }
 .container{
-    max-width: 80%;
+    max-width: 95%;
     height: 100%;
     margin-left: 20px;
     flex-wrap: wrap;
     margin-top: 25px;
     background-color: blueviolet;
+}
+#info_sigle{
+    display: flex;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+.dados{
+    margin-top: 15px;
+}
+#idName_single{
+    margin-left: 5px;
+}
+.wordId{
+    font-weight: 600;
+}
+#userName_single{
+    font-weight: bold;
+    font-size: 17px;
+    margin-left: 10px;
+}
+.ponto{
+    display: inline-block;
+    width: 4px;
+    height: 4px;
+    background-color: black;
+    border-radius: 50%;
+    margin-left: 5px;
+}
+.trêsPontinhos{
+    font-weight: bold;
+    padding: 5px 5px 2px;
+}
+#dia_single{
+    margin-left: 5px;
+    font-weight: 500;
+    font-size: 14px;
+}
+hr{
+    margin-top: 12px;
+}
+.bookDados{
+    display: flex;
+    justify-content: center;
+    padding: 0px 40px 10px;
+}
+.infoBook{
+    padding: 0px 12px 0px;
+}
+.infoBook p{
+    line-height: 20px;
+    margin-top: 5px;
 }
