--- a/BlogBook - teste/analises page/style.css
+++ b/BlogBook - teste/analises page/style.css
@@ -51,7 +51,8 @@
 }
 .trêsPontinhos{
     font-weight: bold;
-    padding: 5px 5px 2px;
+    margin-left: 40px;
+    cursor: pointer;
 }
 #dia_single{
     margin-left: 5px;
