--- a/BlogBook - teste/analises page/style.css
+++ b/BlogBook - teste/analises page/style.css
@@ -54,7 +54,7 @@
     margin-left: 40px;
     cursor: pointer;
     border: none;
-    outline: none;
+    background: none;
 }
 #dia_single{
     margin-left: 5px;
